--- a/views/pasta.ejs
+++ b/views/pasta.ejs
@@ -14,33 +14,12 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-md">
-            <a class="navbar-brand" href="/">Pizza de</a>
+            <a class="navbar-brand" href="/">Pizza with no pileapple</a>
         </div>
-        <span class="navbar-text">
-            <button class="btn btn-outline-success my-2 my-sm-0" id="myBtn" type="submit">Search</button>
-        </span>
     </nav>
 
-    <!-- The Modal -->
-    <div id="myModal" class="modal">
-
-        <!-- Modal content -->
-        <div class="modal-content">
-        <div class="modal-header">
-            <span class="close">&times;</span>
-        </div>
-        <div class="modal-body">
-            <p>Some text in the Modal Body</p>
-            <p>Some other text...</p>
-        </div>
-        <div class="modal-footer">
-        </div>
-        </div>
-    
-    </div>
-
     <div class="center">
-        <form >
+        <form class="">
             <div class="form-group text-center">
               <h3>Please select your seat</h3>
             </div>
@@ -65,53 +44,25 @@
             </div>
         </form>
     </div>
-
     <div class="testDiv">
         <div class="nav">
             <ul class="nav nav-tabs">
                     <li class="nav-item">
-                      <a class="nav-link" href="/">Pizzas</a>
+                      <a class="nav-link" href="/">Pizza</a>
                     </li>
                     <li class="nav-item">
-                       <a class="nav-link" href="/pasta">Pasta</a>
+                       <a class="nav-link active" aria-current="page" href="/pasta">Pasta</a>
                     </li>       
                     <li class="nav-item">
                       <a class="nav-link" href="/drinks">Drinks</a>
                     </li>
-                </ul>  
+                </ul>
         </div>
         <%- include('partials/menuOther') %> 
     </div>
 
     <%- include('partials/footer') %> 
 
-    <script>
-        // Get the modal
-        var modal = document.getElementById("myModal");
-        
-        // Get the button that opens the modal
-        var btn = document.getElementById("myBtn");
-        
-        // Get the <span> element that closes the modal
-        var span = document.getElementsByClassName("close")[0];
-        
-        // When the user clicks the button, open the modal 
-        btn.onclick = function() {
-          modal.style.display = "block";
-        }
-        
-        // When the user clicks on <span> (x), close the modal
-        span.onclick = function() {
-          modal.style.display = "none";
-        }
-        
-        // When the user clicks anywhere outside of the modal, close it
-        window.onclick = function(event) {
-          if (event.target == modal) {
-            modal.style.display = "none";
-          }
-        }
-    </script>
 
     <!-- !Optional JavaScript -->
     <!-- !jQuery first, then Popper.js, then Bootstrap JS -->
