--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -242,7 +242,7 @@ crossorigin="anonymous">
 
     .section-products .single-product .part-1 .new {
         left: 0;
-        background-color: #444444;
+        background-color: #fe302f;
     }
 
     .section-products .single-product .part-1 ul {
@@ -268,7 +268,7 @@ crossorigin="anonymous">
 
     .section-products .single-product .part-1 ul li a {
         display: inline-block;
-        width: 40px;
+        width: 80px;
         height: 40px;
         line-height: 40px;
         background-color: #ffffff;
