--- a/views/pasta.ejs
+++ b/views/pasta.ejs
@@ -7,21 +7,25 @@
         </span>
     </nav>
 
-    <!-- The Modal -->
+    <!--modal-->
     <div id="myModal" class="modal">
-
         <!-- Modal content -->
         <div class="modal-content">
             <div class="modal-header">
                 <span class="close">&times;</span>
             </div>
-            <div class="modal-body">
-                <div class="row justify-content-center text-center">
-                    <div class="col-md-8 col-lg-6">
-                        <h2 id="table"></h2>
+            <div class="modal-body" >
+                <div class="container">
+                    <div class="row justify-content-center text-center">
+                        <div class="col-md-8 col-lg-6">
+                                <div class="header">
+                                    <h2>OrderList</h2>
+                                </div>
+                        </div>
+                    </div>
+                    <div class="row" id="asd">
                     </div>
                 </div>
-                <%- include('partials/orderList') %> 
             </div>
             <div class="modal-footer">
             </div>
