--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,18 +8,28 @@
         </span>
     </nav>
 
-<!-- The Modal -->
+    <!--modal-->
     <div id="myModal" class="modal">
         <!-- Modal content -->
         <div class="modal-content">
-        <div class="modal-header">
-            <span class="close">&times;</span>
-        </div>
-        <div class="modal-body">
-            <%- include('partials/orderList') %> 
-        </div>
-        <div class="modal-footer">
-        </div>
+            <div class="modal-header">
+                <span class="close">&times;</span>
+            </div>
+            <div class="modal-body" >
+                <div class="container">
+                    <div class="row justify-content-center text-center">
+                        <div class="col-md-8 col-lg-6">
+                                <div class="header">
+                                    <h2>OrderList</h2>
+                                </div>
+                        </div>
+                    </div>
+                    <div class="row" id="asd">
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+            </div>
         </div>
     </div>
 
@@ -50,19 +60,12 @@
         
         // Get the button that opens the modal
         var btn = document.getElementById("myBtn");
-
-        var bt = document.getElementById("myBt");
         
         // Get the <span> element that closes the modal
         var span = document.getElementsByClassName("close")[0];
         
         // When the user clicks the button, open the modal 
         btn.onclick = function() {
-            modal.style.display = "block";
-            
-        }
-
-        bt.onclick = function() {
             modal.style.display = "block";
             
         }
@@ -87,9 +90,15 @@
 
             input = document.getElementById("myInput");
             filter = input.value.toUpperCase();
+            console.log(filter)
             ul = document.getElementById("product");
+            ul.forEach(element => {
+                
+            });
             for (i = 0; i < ul.length; i++) {
-                a = ul[i].getElementById("name")[0];
+                a = ul[i].getElementById("name");
+                console.log(a.textContent || a.innerText)
+                console.log("1")
                 txtValue = a.textContent || a.innerText;
                 if (txtValue.toUpperCase().indexOf(filter) > -1) {
                     ul[i].style.display = "";
