--- a/views/login.ejs
+++ b/views/login.ejs
@@ -46,7 +46,7 @@
 
             if(result.status === 'ok'){
                 console.log("Got token:", result.data)
-                location.href = "http://localhost:3001/4y0h9WnLw/TjWXpwK9EZ4D7WCZaB9s/2U/sPcnup1do=/kitchen";
+                location.href = "http://192.168.1.102:3000/4y0h9WnLw/TjWXpwK9EZ4D7WCZaB9s/2U/sPcnup1do=/kitchen";
             }else {
                 alert(result.error)
                 
