--- a/views/partials/menuOther.ejs
+++ b/views/partials/menuOther.ejs
@@ -12,7 +12,7 @@
                 <% if(categories != '') {%>
                         <% categories.forEach(function (category, index) {%> 
                                 <!-- Single Product -->
-                                <div class="col-md-6 col-lg-4 col-xl-3" id="product">
+                                <div class="col-md-6 col-lg-4 col-xl-3 boxs" id="product">
                                         <div id="product-1" class="single-product">
                                                 <div id="<%- category.ID %>">
                                                         <div class="part-1" style="background-image: url('<%- category.image %>');background-size: 140%;background-repeat: no-repeat;">
