--- a/views/drinks.ejs
+++ b/views/drinks.ejs
@@ -1,8 +1,9 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-md">
+        <div class="container-fluid">
             <a class="navbar-brand" href="/">Pizza de</a>
         </div>
-        <span class="navbar-text">
+        <span class="d-flex">
+            <input class="form-control me-2" type="search" id="myInput"  placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-success my-2 my-sm-0" id="myBtn" type="submit">Search</button>
         </span>
     </nav>
@@ -19,11 +20,11 @@
                     <div class="row justify-content-center text-center">
                         <div class="col-md-8 col-lg-6">
                                 <div class="header">
-                                    <h2>OrderList</h2>
                                 </div>
                         </div>
                     </div>
                     <div class="row" id="asd">
+                        <%- include('partials/orderList') %> 
                     </div>
                 </div>
             </div>
@@ -59,26 +60,12 @@
         
         // Get the button that opens the modal
         var btn = document.getElementById("myBtn");
-
-        var bt = document.getElementById("myBt");
         
         // Get the <span> element that closes the modal
         var span = document.getElementsByClassName("close")[0];
         
         // When the user clicks the button, open the modal 
         btn.onclick = function() {
-            modal.style.display = "block";
-            
-        }
-
-        bt.onclick = function() {
-            var id = document.getElementById("idTable");
-            var strUser = id.options[id.selectedIndex].text;
-            var number = document.getElementById("numberTable");
-            var strUser1 = number.options[number.selectedIndex].text;
-
-            var keep = strUser+strUser1;
-
             modal.style.display = "block";
             
         }
@@ -92,6 +79,26 @@
         window.onclick = function(event) {
             if (event.target == modal) {
                 modal.style.display = "none";
+            }
+        }
+
+        var bar = document.getElementById("myInput");
+
+        bar.onkeyup = function myFunction() {
+
+            var input, filter, list, a;
+            input = document.getElementById("myInput");
+            filter = input.value.toUpperCase();
+            
+            list = document.getElementsByClassName("boxs");
+            
+            for (let i = 0; i < list.length; i++) {
+                a = list[i].children[0].children[0].children[1].children[0].innerHTML;
+                if (a.toUpperCase().indexOf(filter) > -1) {
+                    list[i].style.display = "";
+                } else {
+                    list[i].style.display = "none"
+                }
             }
         }
     </script>
