--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,11 +20,11 @@
                     <div class="row justify-content-center text-center">
                         <div class="col-md-8 col-lg-6">
                                 <div class="header">
-                                    <h2>OrderList</h2>
                                 </div>
                         </div>
                     </div>
                     <div class="row" id="asd">
+                        <%- include('partials/orderList') %> 
                     </div>
                 </div>
             </div>
@@ -86,21 +86,18 @@
 
         bar.onkeyup = function myFunction() {
 
-            var input, filter, ul, li, a, i, txtValue;
-
+            var input, filter, list, a;
             input = document.getElementById("myInput");
             filter = input.value.toUpperCase();
-            console.log(filter)
-            ul = document.getElementById("product");
-            for (i = 0; i < ul.length; i++) {
-                a = ul[i].getElementById("name");
-                console.log(a.textContent || a.innerText)
-                console.log("1")
-                txtValue = a.textContent || a.innerText;
-                if (txtValue.toUpperCase().indexOf(filter) > -1) {
-                    ul[i].style.display = "";
+            
+            list = document.getElementsByClassName("boxs");
+            
+            for (let i = 0; i < list.length; i++) {
+                a = list[i].children[0].children[0].children[1].children[0].innerHTML;
+                if (a.toUpperCase().indexOf(filter) > -1) {
+                    list[i].style.display = "";
                 } else {
-                    ul[i].style.display = "none";
+                    list[i].style.display = "none"
                 }
             }
         }
