--- a/views/kitchen.ejs
+++ b/views/kitchen.ejs
@@ -6,4 +6,5 @@
 
 <div class="testDiv" style="margin-top: 3%;">
     <%- include('partials/orderList') %> 
+    <button onclick="window.location.reload()" type="button" class="btn btn-primary" ><i class="bi bi-arrow-clockwise"></i></button>
 </div>
