--- a/views/partials/orderList.ejs
+++ b/views/partials/orderList.ejs
@@ -3,8 +3,7 @@
             <div class="row justify-content-center text-center">
                     <div class="col-md-8 col-lg-6">
                             <div class="header">
-                                    <h3>Featured Product</h3>
-                                    <h2>Popular Products</h2>
+                                    <h2><u>Order List</u></h2>
                             </div>
                     </div>
             </div>
@@ -12,7 +11,9 @@
                 <% if(orderss != '') {%>
                         <% orderss.forEach(function (category, index) {%> 
                                 <!-- Single Product -->
-                                <div class="col-md-6 col-lg-4 col-xl-3" id="product">
+                                <div class="col-md-6 col-lg-4 col-xl-3" id="product" style="border: 0.5px solid red;
+                                                                                            border-radius: 5px;
+                                                                                            border-color: #444444;">
                                         <div id="product-1" class="single-product">
                                             <div class="part-1" style="background-image: url('https://fs.hut1150.com/pizzas/veggie-18112020104836.jpg');background-size: 140%;background-repeat: no-repeat;">
                                             </div>
